manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: reactdeploytest
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: reactdeploytest
